# fping_exporter

./: Cargo.toml  README.md  fping.toml
src/: main.rs  ping_result.rs
