[package]
name = "fping_exporter"
version = "0.1.0"
authors = ["Boden Garman <boden.garman@spintel.net.au>"]
edition = "2018"

[dependencies]
hashbrown = "0.6"
lazy_static = "1.3"
prometheus_exporter_base = "0.5.0"
regex = { version = "1", features = ["std", "perf"] }
serde = "1"
serde_derive = "1"
structopt = "0.2"
structopt-toml = "0.4"
toml = "0.4.5"
