[package]
name = "fping_exporter"
version = "1.1.0"
authors = ["Boden Garman <bpgarman@fastmail.fm>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
hashbrown = "0.6"
ipnet =  { version = "2", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.9.0"
prometheus_exporter_base = "0.4.0"
rand = "0.7.2"
regex = { version = "1", features = ["std", "perf"] }
serde = "1"
serde_derive = "1"
simple_logger = "1"
snafu = "0.5"
structopt = "0.2"
structopt-toml = "0.4.0"
toml = "0.5"